--- a/HandwrittenCalcApp/templates/index.html
+++ b/HandwrittenCalcApp/templates/index.html
@@ -1,13 +1,23 @@
 {% extends "base.html" %}
-
 {% block bodyblock %}
 
         <div class="container">
-            <br><br>
-            <h3 class="content"><span style="color:green">시각과정 총 정리 프로젝트</span>에 오신 것을 환영합니다!</h3>
             <br>
-            <p>
-                tensorflow로 만든 모델을 Flask를 통해 결과로 만들었습니다!
-            </p>
+            <br>
+            <br>
+            <br>
+            <br>
+            <div class="fade-in-text">
+                <h3 class="index-content" style="color:rgb(255, 255, 255)">Computer Vision Project</h3>
+                <br>
+                <h1 class="index-content" style="color:rgb(255, 255, 255)">Tensorflow로 만든 모델을 Flask를 통해 웹으로 구현</h1>
+            
+            <br>
+            <br>
+                <p style="color:rgb(255, 255, 255)">
+                    - 손글씨로 적은 계산식 객체를 인식해 사칙연산 계산값 출력 -
+                </p>
+            </div>
         </div>
+        
 {% endblock %}
