--- a/HandwrittenCalcApp/templates/base.html
+++ b/HandwrittenCalcApp/templates/base.html
@@ -3,55 +3,54 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>손글씨 계산기</title>
-
+        <title>Computer Vision Project</title>
+        <!-- CSS -->
         <link rel="stylesheet" href="{{ url_for("static", filename="css/main.css") }}">
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     </head>
 
     <body>
+        <!-- navbar -->
         <div class="container">
-            <nav class="navber navbar-expand-lg navbar-light bg-light">
-                <a class="navbar-brand" href="{{ url_for("index") }}">
-                    <img src="{{ url_for("static", filename="image/vangogh.jpg") }}" alt="회사 이미지" width="150" height="30">
-                </a>
-                <button class="navbar-toggle" type="button" data-toggle="collapse", data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggle-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNavAltMarup">
-                    <div class="navbar-nav">
-                        <a class="nav-item nav-link" href="{{ url_for("index") }}">Home</a>
-                        <a class="nav-item nav-link" href="{{ url_for("calcapp") }}">Calc</a>
+            <nav class="navbar navbar-expand-lg navbar-light fixed-top" style="background-color: #ffffff;">
+                <div class="container">
+                    <a class="navbar-brand" href="{{ url_for("index") }}"><h3>CVproject</h3></a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNav">
+                        <ul class="navbar-nav">
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="{{ url_for("index") }}">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="{{ url_for("calcapp") }}">Calc</a>
+                            </li>
+                        </ul>
                     </div>
                 </div>
+                <!-- 깃헙 이미지 버튼 -->
+                <a class="github-btn" href="https://github.com/factorLee/handwittenCalculator_tensorflow-flask">
+                    <img class="float-right" src="{{ url_for("static", filename="image/githublogo03.png") }}" width="50" height="auto" align="right">
+                </a>    
             </nav>
         </div>
 
+        <!-- 상속 head -->
         {% block bodyblock %}
         {% endblock %}
     
+        <!-- footer -->
         <footer class="footer">
             <div class="container">
-                <img src="{{ url_for("static", filename="image/footer.png") }}" alt="footer logo" width="200" height="40">
-                <p align = "center">
-                    <span style="color: white;">
-                        copyrights 이상주
-                    </span>
-                </p>
+                <img class="logo" src="{{ url_for("static", filename="image/tensorflowlogo.png") }}" alt="tensorflow logo" width="100" height="auto">
+                <img class="logo" src="{{ url_for("static", filename="image/opencvlogo.png") }}" alt="OpenCV logo" width="100" height="auto">
+                <img class="logo" src="{{ url_for("static", filename="image/flasklogo.png") }}" alt="flask logo" width="100" height="auto">
             </div>
         </footer>
 
-        <style>
-            .footer {
-                position: fixed;
-                left: 0;
-                bottom: 0;
-                width: 100%;
-                background-color: black;
-                padding-top: 40px;
-                padding-bottom: 20px;
-            }
-        </style>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
     </body>
-
 </html>
