--- a/HandwrittenCalcApp/templates/calculation.html
+++ b/HandwrittenCalcApp/templates/calculation.html
@@ -3,48 +3,59 @@
 {% block bodyblock %}
 
     <div class="container">
-        <h3>계산식을 인식 해줍니다.</h3>
+        <br>
+        <h2 style="color: white;">인식할 계산식 이미지를 첨부하세요.</h2>
 
     </div>
-
+    <!-- 파일 읽기 -->
     <div class="container">
         <br>
-        <form action="#" method="POST" enctype="multipart/form-data">
-            <label for="upload">인식할 이미지를 업로드</label>
-            <input type="file" id="upload" name="image" required="true">
-            <input type="submit" value="업로드 및 인식">
+        <form class="p-3 text-center" action='#', method="POST" enctype="multipart/form-data">
+            <input class="form-control" type="file" id="upload" name="image" required="true">
+            <input class="btn btn-light mt-3" type="submit" value="업로드 및 인식">
         </form>
     </div>
-
+    <!-- 출력 -->
     {% if fileupload %}
-        <div class="container">
-            <div class="row">
-                <div class="col-md-6" id="predict">
-                    <img 
-                    src="{{ url_for("static", filename="uploads/") }}{{ img_name }}"
-                    alt="업로드한 이미지" 
-                    width="{{ w }}" 
-                    height="300">
-                </div>
-                <div class="col-md-6" id="predict">
-                    <img 
-                    src="{{ url_for("static", filename="result/") }}{{ img_name }}"
-                    alt="인식한 이미지"
-                    width="{{ w }}" 
-                    height="300">
+        {% if sol != 'error' %}
+            <div class="container">
+                <div class="fade-in-text">
+                    <div class="row">
+                        <div class="col-md-6" id="predict">
+                            <img 
+                            src="{{ url_for("static", filename="uploads/") }}{{ img_name }}"
+                            alt="업로드한 이미지" 
+                            width="auto" 
+                            height="200">
+                        </div>
+                        <div class="col-md-6" id="predict">
+                            <img 
+                            src="{{ url_for("static", filename="result/") }}{{ img_name }}"
+                            alt="인식한 이미지"
+                            width="auto" 
+                            height="200">
+                        </div>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div>
-            <h1>솔루션 : {{ sol }}</h1>
-        </div>
+                <br>
+                <br>
+                <div class="fade-in-text" style="border: solid; color: white ">
+                    <h1 class="solve"><em>Solution : </em></h1>
+                    <h1 class="solve"><em>{{ rightSide }} {{ operator }} {{ leftSide }} = {{ sol }}</em></h1>
 
-        <style>
-            #predict {
-                border: solid;
-                color: black
-            }
-        </style>
+                </div>
+            </div>
+
+        {% else %}
+            <div class="container">
+                <div class="alert alert-danger" role="alert">
+                    해당 파일을 인식하지 못했습니다. <a href="{{ url_for("calculation") }}" class="alert-link">여기를 클릭하여 파일을 다시 업로드 해주세요</a>. (정면에서 올바르게 찍힌 사진을 넣어주세요.)
+                </div>
+            </div>
+    
+        {% endif %}
+
     {% endif %}
 
 {% endblock %}
